Fix spacing issue on ample panels in shelf

--- a/app/assets/stylesheets/ample_assets/files.css.scss
+++ b/app/assets/stylesheets/ample_assets/files.css.scss
@@ -329,7 +329,7 @@ textarea {
   } //asset-search
   
   .ampn {
-    margin-left: calc-em(21px, $base-font-size);
+    margin-left: calc-em(14px, $base-font-size);
     position: relative;
     z-index: 100;
     .empty {
